<resources>
    <string name="app_name">Weather Info</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_favorite">Favorite</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="current_temp">%1$s %2$s</string>
    <string name="current_min_temp">%1$s %2$s</string>
    <string name="current_max_temp">%1$s %2$s</string>

    <string name="lat_long">Latitude: %1$s  Longitude: %2$s</string>
    <string name="place_name">Name: %1$s</string>
    <string name="place_open">Open now: %1$s</string>
    <string name="place_type">Types: %1$s</string>
    <string name="place_rating">Rating: %1$s</string>

    <string name="last_updated">Last updated: %1$s</string>


    <string name="home_second">Home Second</string>
    <string name="google_maps_key">AIzaSyCVkcik_E3WcjxYBELZfXa1zPzu2Nw-dus</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="no_place_info">No Information about Place</string>
    <string name="loading">Loading......</string>
</resources>
